--- a/Style.css
+++ b/Style.css
@@ -19,6 +19,8 @@
 
 *{
     font-family: 'Anton';
+    scrollbar-color: #fd7b02 rgba(48, 46, 47, 0.507);
+    scrollbar-width:thin;
 }
 
 .logo{
@@ -81,6 +83,7 @@
 
  .galeria-img {
     object-fit: cover;
+    cursor: pointer;
     width: 100%;
     height: 100%;
   }
@@ -111,8 +114,8 @@
   }
 
   .shadow-pop {
-    position: relative;
-    transition: box-shadow ease-in-out;
+     position: relative;
+      transition: box-shadow ease-in-out;
   }
   
   .shadow-pop:hover {
@@ -122,3 +125,127 @@
   }
 
   
+
+  @media screen and (min-width: 780px) {
+     .img{
+      margin: 0px;
+    }
+  }
+
+
+/* animacion de slider */
+  .slider-frame {
+    overflow: hidden;
+  }
+  
+  .slider-frame ul {
+    display: flex;
+    padding: 0;
+    width: 300%;
+    
+    animation: slide 15s infinite normal ease-in-out;
+  }
+  
+  .slider-frame li {
+    list-style: none;
+  }
+  
+  .slider-frame img {
+    width: 100%;
+  }
+  
+  @keyframes slide {
+    0% {margin-left: 0;}
+    30% {margin-left: 0;}
+    
+    35% {margin-left: -100%;}
+    60% {margin-left: -100%;}
+    
+    65% {margin-left: -200%;}
+    95% {margin-left: -200%;}
+    
+  }
+
+
+  @keyframes slideIn {
+    from {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  /* Aplica la animación 'slideIn' al elemento con la clase 'animated-text' */
+  .animated-text {
+    animation: slideIn 1s ease-out;
+  }
+
+
+
+  .loader-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
+
+  .ocultar {
+    display: none;
+  }
+  
+  .loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #fd7b02;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+/* Estilo del modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.9);
+}
+
+/* Estilo del contenido del modal */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 100%;
+  max-width: 700px;
+}
+
+/* Estilo para cerrar el modal */
+.close {
+  color: #fd7b02;
+  font-size: 50px;
+  font-weight: bold;
+  position: absolute;
+  top: 100px;
+  right: 25px;
+  cursor: pointer;
+}
+
