--- a/Style.css
+++ b/Style.css
@@ -30,8 +30,22 @@
 }
 
 .iconFooter{
-    width: 6em;
+   max-width: 80px;
 }
+
+.textFooter{
+  font-size: x-small;
+}
+
+.mediaFooter li{
+  list-style: none;
+  
+}
+
+.custom-icon {
+  color: white; /* Puedes cambiar "red" por el color que desees */
+}
+
 
 .map-responsive{
 
@@ -121,8 +135,8 @@
   
 
   @media screen and (min-width: 780px) {
-     .img{
-      margin: 0px;
+     img{
+      margin: 0;
     }
     
   }
@@ -184,7 +198,7 @@
 
   /* Aplica la animación 'slideIn' al elemento con la clase 'animated-text' */
   .animated-text {
-    animation: slideIn 1s ease-out;
+    animation: slideIn 2.5s ease;
   }
 
 
@@ -280,7 +294,8 @@
   flex-grow: 1;
   object-fit: cover;
   opacity: .6;
-  transition: .5s ease;
+  transition: .7s ease;
+  
 }
 
 .categoria:hover {
@@ -304,6 +319,14 @@
    75% { transform: translateX(-5px); }
    100% { transform: translateX(0); }
  }
+
+ @keyframes shake-up {
+  0% { transform: translateY(0); }
+  25% { transform: translateY(-5px); }
+  50% { transform: translateY(5px); }
+  75% { transform: translateY(-5px); }
+  100% { transform: translateY(0); }
+}
  
  /* Aplica la animación a la clase 'shake' */
  .shaking {
@@ -364,6 +387,8 @@
 }
 
 
+
+
 @keyframes moveFromRigth {
   from {
     transform: translateX(+100%);
@@ -376,7 +401,7 @@
 .animated-card-Rigth {
   position: relative;
   overflow: hidden;
-  animation: moveFromRigth 1.5s ease;
+  animation: moveFromRigth 1,5s ease;
 }
 
 .animated-card-left {
@@ -424,3 +449,62 @@
 #enviarBtn.exito {
   background-color: #4caf50; /* Cambia a verde en éxito */
 }
+
+.margin-l{
+  margin-left: 10px;
+}
+
+.margin-r{
+  margin-right: 20px;
+}
+
+.container-cats{
+  min-width: 300px;
+}
+
+form input, form select {
+  border: 2px solid #000000; /* Color del borde */
+  border-radius: 5px; /* Bordes redondeados */
+}
+
+/* Estilos adicionales para el input cuando está enfocado (con el cursor dentro) */
+form input:focus, form select:focus {
+  outline: none; /* Elimina el contorno predeterminado del navegador */
+  border-color: #fd7b02; /* Cambia el color del borde al enfocar */
+  box-shadow: 0 0 5px #fd7b02; /* Agrega una sombra al enfocar */
+}
+
+
+
+
+
+
+@media screen and (max-width: 780px) {
+  .margin-l {
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
+  .margin-r {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .categoria {
+    width: 100%; /* Ajusta el tamaño según sea necesario para dispositivos móviles */
+    margin-bottom: 10px;
+  }
+
+  .categoria:hover{
+    cursor: pointer;
+    opacity: 1;
+    filter: contrast(120%);
+    animation: shake-up 0.5s;
+  }
+  
+  
+  #img-gracias{
+    display: none;
+  }
+
+}
+
